--- a/about.html
+++ b/about.html
@@ -183,7 +183,7 @@ body, html {
       <div class="nav-icon active" id="phone" onclick="window.location.href='about.html'">
         <i class="fas fa-phone"></i>
       </div>
-      <div class="nav-icon" id="home" onclick="window.location.href='iRANCOiN.html'">
+      <div class="nav-icon" id="home" onclick="window.location.href='index.html'">
         <i class="fas fa-home"></i>
       </div>
       <div class="nav-icon" id="store" onclick="window.location.href='store.html'">
