--- a/binary-store.html
+++ b/binary-store.html
@@ -96,7 +96,7 @@
           <div class="nav-icon" id="phone" onclick="window.location.href='about.html'">
             <i class="fas fa-phone"></i>
           </div>
-          <div class="nav-icon" id="home" onclick="window.location.href='iRANCOiN.html'">
+          <div class="nav-icon" id="home" onclick="window.location.href='index.html'">
             <i class="fas fa-home"></i>
           </div>
           <div class="nav-icon active" id="store" onclick="window.location.href='store.html'">
