--- a/crypto-gallary.html
+++ b/crypto-gallary.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>گالری باینری آپشن</title>
+    <title>گالری ارزهای دیجیتال</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"><link rel="stylesheet" href="./navbar.css">
     <style>
         body {
@@ -320,7 +320,7 @@
   <div class="nav-icon" id="phone" onclick="window.location.href='about.html'">
     <i class="fas fa-phone"></i>
   </div>
-  <div class="nav-icon" id="home" onclick="window.location.href='iRANCOiN.html'">
+  <div class="nav-icon" id="home" onclick="window.location.href='index.html'">
     <i class="fas fa-home"></i>
   </div>
   <div class="nav-icon" id="store" onclick="window.location.href='store.html'">
