--- a/gallary.html
+++ b/gallary.html
@@ -221,7 +221,7 @@ p {
       <div class="nav-icon" id="phone" onclick="window.location.href='about.html'">
         <i class="fas fa-phone"></i>
       </div>
-      <div class="nav-icon" id="home" onclick="window.location.href='iRANCOiN.html'">
+      <div class="nav-icon" id="home" onclick="window.location.href='index.html'">
         <i class="fas fa-home"></i>
       </div>
       <div class="nav-icon" id="store" onclick="window.location.href='store.html'">
