--- a/store.html
+++ b/store.html
@@ -156,13 +156,13 @@
   <div class="layer"></div>
 </div>
 <div class="bottom-nav">
-  <div class="nav-icon" id="fire" onclick="window.location.href='acti.html'">
+  <div class="nav-icon" id="fire" onclick="window.location.href='activation.html'">
     <i class="fas fa-fire"></i>
   </div>
   <div class="nav-icon" id="phone" onclick="window.location.href='about.html'">
     <i class="fas fa-phone"></i>
   </div>
-  <div class="nav-icon" id="home" onclick="window.location.href='iRANCOiN.html'">
+  <div class="nav-icon" id="home" onclick="window.location.href='index.html'">
     <i class="fas fa-home"></i>
   </div>
   <div class="nav-icon active" id="store" onclick="window.location.href='store.html'">
