--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>iRANCOiN</title>
 	<link rel="stylesheet" href="./style.css">
 	<link rel="stylesheet" href="./text-animation.css">
+	<link rel="manifest" href="/manifest.json">
 	<link rel="stylesheet" href="./navbar.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -207,5 +208,12 @@
 <script type="text/javascript" src="cdn_modules/animate.css@4.1.1/animate.css"></script>
 <script type="text/javascript" src="cdn_modules/animate.css@4.1.1/animate.compat.min.css"></script>
 <script type="text/javascript" src="cdn_modules/animate.css@4.1.1/animate.compat.css"></script>
+	<script>
+		if ('serviceWorker' in navigator) {
+  navigator.serviceWorker.register('/sw.js')
+    .then(() => console.log('Service Worker Registered'))
+    .catch((error) => console.log('Service Worker Registration Failed', error));
+}
+</script>
 </body>
 </html>
